@@ -1,3 +1,8 @@
+2007-07-18 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.0.5, SECURITY_PATCH=9
+	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.5
+	* firefox-config.patch: updated to 2.0.0.5
+
 2007-06-06 David Kowis <dkowis@shlrm.org>
 	* PRE_BUILD, DEPENDS, visibility.patch: Don't need the visibility patch anymore for 
 	  amd64 (probaby ppc)
